@@ -1,3 +1,11 @@
+2025-12-26  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* src/roff/troff/input.cpp (read_delimited_measurement): Make
+	function definition agree with declaration; return object of
+	type `units` rather than `int`.  (They're type-aliased with
+	`typedef`, but scrupulous type correctness is more conceptually
+	coherent and forecloses an avenue of future error.)
+
 2025-12-25  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* src/roff/troff/input.cpp (read_input_until_terminator):
